--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
-language: node_js
-node_js:
-  - node
+sudo: required
+services:
+  - docker
+
+before_install:
+  - docker build -t pavlochigishev/qa.coach:latest -f Dockerfile.dev .
+  - docker image push --all-tags pavlochigishev/qa.coach:latest
+
+scripts:
+  - docker run -e CI=true pavlochigishev/qa.coach yarn run lint
