Did some changes related to docker and travis CI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,4 @@ services:
     volumes:
       - /app/node_modules
       - .:/app
-    command: ["yarn", "run", "lint"]
+    command: ["yarn", "run", "test"]
