--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ before_install:
   - docker build -t pavlochigishev/qa.coach:latest -f Dockerfile.dev .
 
 scripts:
+  - docker run -e CI=true pavlochigishev/qa.coach yarn run test
   - docker run -e CI=true pavlochigishev/qa.coach yarn run lint
