--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,5 @@ deploy:
     branch: main
     tags: true
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+  secret_access_key: $AWS_SECRET_KEY
   edge: true
