Fixed bug in travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t pavlochigishev/qa.coach-test-www:latest -f ./www/Dockerfile.dev ./www
 
 scripts:
-  - docker run -e CI=true pavlochigishev/qa.coach yarn run test && yarn run lint
+  - docker run -e CI=true pavlochigishev/qa.coach-test-www:latest yarn run test && yarn run lint
 
 after_success:
   - docker build -t pavlochigishev/qa.coach-prod-www:latest ./www
@@ -20,3 +20,27 @@ after_success:
   - docker push -t pavlochigishev/qa.coach-prod-api:latest
   - docker push -t pavlochigishev/qa.coach-prod-worker:latest
   - docker push -t pavlochigishev/qa.coach-prod-nginx:latest
+
+  deploy:
+  - provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "qa.coach"
+    env: "www-production"
+    bucket_name: "elasticbeanstalk-us-east-2-638777900629"
+    bucket_path: "qa.coach"
+    on:
+      tags: true
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    edge: true
+  - provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "qa.coach"
+    env: "www-staging"
+    bucket_name: "elasticbeanstalk-us-east-2-638777900629"
+    bucket_path: "qa.coach"
+    on:
+      branch: develop
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    edge: true
