--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 
 scripts:
   # unit tests and linting here
-  - docker run -e CI=true pavlochigishev/qa.coach-test-www:latest yarn run tests
+  - docker run -e CI=true pavlochigishev/qa.coach-test-www:latest yarn run test
 
 after_success:
   - docker build -t pavlochigishev/qa.coach-prod-www:latest ./www
