--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,15 @@ scripts:
   - docker run -e CI=true pavlochigishev/qa.coach-test-www:latest yarn run test
 
 after_success:
-  - docker build -t pavlochigishev/qa.coach-prod-www:latest ./www
-  - docker build -t pavlochigishev/qa.coach-prod-api:latest ./api-server
+  - docker build -t pavlochigishev/qa.coach-prod-web:latest ./www
+  - docker build -t pavlochigishev/qa.coach-prod-api-server:latest ./api-server
   - docker build -t pavlochigishev/qa.coach-prod-worker:latest ./worker
   - docker build -t pavlochigishev/qa.coach-prod-nginx:latest ./nginx
   # docker login via CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # push built images to docker hub
-  - docker push -t pavlochigishev/qa.coach-prod-www:latest
-  - docker push -t pavlochigishev/qa.coach-prod-api:latest
+  - docker push -t pavlochigishev/qa.coach-prod-web:latest
+  - docker push -t pavlochigishev/qa.coach-prod-api-server:latest
   - docker push -t pavlochigishev/qa.coach-prod-worker:latest
   - docker push -t pavlochigishev/qa.coach-prod-nginx:latest
 
